@@ -5,6 +5,7 @@ import java.util.List;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -23,87 +24,61 @@ import com.hankki.domain.auth.service.AuthUserDetailsService;
 
 import lombok.RequiredArgsConstructor;
 
+/**
+ * Security 설정 클래스
+ */
 @RequiredArgsConstructor
 @Configuration
 public class WebSecurityConfig {
     private final AuthUserDetailsService authUserDetailsService;
     private final TokenProvider tokenProvider;
 
+    /**
+     * 정적 리소스 및 H2 콘솔 무시
+     */
     @Bean
     public WebSecurityCustomizer webSecurityCustomizer() {
-        // 정적 리소스 및 H2 콘솔 무시
         return web -> web.ignoring()
             .requestMatchers("/static/**", "/h2-console/**");
     }
 
-//    @Bean
-//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//        http
-//        .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-//            .csrf(csrf -> csrf.disable())
-//            .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-//            .authorizeHttpRequests(authz -> authz
-//                .requestMatchers("/api/user/admin/**").hasRole("ADMIN")
-//                .requestMatchers("/api/actuator/health", "/api/actuator/info").permitAll()
-//                // 로그인, 회원가입, 토큰 갱신 등은 모두 허용
-//                .requestMatchers(
-//                    "/user/signup",
-//                    "/user/login",
-//                    "/user/refresh"
-//                ).permitAll()
-//                .anyRequest().authenticated()
-//            )
-//            .addFilterBefore(
-//                new TokenAuthenticationFilter(tokenProvider),
-//                UsernamePasswordAuthenticationFilter.class
-//            );
-//
-//        return http.build();
-//    }
-    
-//    @Bean
-//    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-//        http
-//          // ↓↓↓ 모든 요청을 인증 없이 허용
-//          .authorizeHttpRequests(authz -> authz
-//               .anyRequest().permitAll()
-//          )
-//          .csrf(csrf -> csrf.disable())
-//          .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-//          .cors(cors -> cors.configurationSource(corsConfigurationSource()));
-//        return http.build();
-//    }
+    /**
+     * JWT 필터를 빈으로 등록
+     */
+    @Bean
+    public TokenAuthenticationFilter tokenAuthenticationFilter() {
+        return new TokenAuthenticationFilter(tokenProvider);
+    }
 
+    /**
+     * SecurityFilterChain 설정
+     */
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
           .cors(cors -> cors.configurationSource(corsConfigurationSource()))
           .csrf(csrf -> csrf.disable())
           .sessionManagement(sm -> sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-          .authorizeHttpRequests(authz -> authz
-              // 로그인·회원가입·토큰 갱신은 모두 인증 없이 접근 허용
-              .requestMatchers(
-                  "/auth/signup",
-                  "/auth/login",
-                  "/auth/refresh"
-              ).permitAll()
-              // 그 외 모든 요청은 인증 필요
-              .anyRequest().authenticated()
-          )
-          // JWT 토큰 필터 등록
-          .addFilterBefore(
-              new TokenAuthenticationFilter(tokenProvider),
-              UsernamePasswordAuthenticationFilter.class
-          );
+            .authorizeHttpRequests(authz -> authz
+                // 에러 핸들러
+                .requestMatchers("/error").permitAll()
+                // 프리플라이트 OPTIONS
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                // 인증 불필요 경로 (auth/** 패턴으로 모든 인증 관련 엔드포인트 허용)
+                .requestMatchers("/auth/**", "/actuator/health").permitAll()
+                // (만약 관리자 API면 여기도 명시)
+                .requestMatchers("/admin/**").hasRole("ADMIN")
+                // 나머지 모든 API는 인증 필요
+                .anyRequest().authenticated()
+            )
+            .addFilterBefore(tokenAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
-  
-    
-    
-    
-    
 
+    /**
+     * AuthenticationManager 설정
+     */
     @Bean
     public AuthenticationManager authenticationManager(HttpSecurity http) throws Exception {
         AuthenticationManagerBuilder authBuilder = http.getSharedObject(AuthenticationManagerBuilder.class);
@@ -113,27 +88,31 @@ public class WebSecurityConfig {
         return authBuilder.build();
     }
 
+    /**
+     * 비밀번호 암호화
+     */
     @Bean
     public BCryptPasswordEncoder bCryptPasswordEncoder() {
         return new BCryptPasswordEncoder();
     }
+
+    /**
+     * CORS 설정
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        // CRUD + OPTIONS, PATCH 요청 허용
-        configuration.setAllowedMethods(Arrays.asList(
-            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
-        ));
-        configuration.setAllowedHeaders(List.of("*"));
-        // 클라이언트가 Authorization, Content-Type 헤더를 읽을 수 있도록
-        configuration.setExposedHeaders(List.of("Authorization", "Content-Type"));
-        // 토큰만 씀
-        configuration.setAllowCredentials(false);
+        // 모든 오리진 허용 (개발환경에서만)
+        configuration.addAllowedOriginPattern("*");
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("*")); // 모든 헤더 허용
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setAllowCredentials(false);  // JWT만 사용시 false
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
 }
